test/errors/zero_tape_count.trm
machine Error

states: q0 q1
accept: q1
init: q0
tapes: 0 10 ""

q0 | '_' | q0 |  ?  | ?
q0 | 'q' | q1 | 'q' | =

end